# mod-manager

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/top/laoxin/modmanager/: MainActivity.kt
app/src/main/kotlin/top/laoxin/modmanager/: App.kt
app/src/main/python/Ark-Unpacker/: Main.py  pyproject.toml
app/src/main/python/Ark-Unpacker/src/: CollectModels.py  CombineRGBwithA.py  DecodeTextAsset.py  ModelsDataDist.py  ResolveAB.py
app/src/main/python/Ark-Unpacker/src/fbs/CN/: activity_table.py  buff_table.py  building_data.py  campaign_table.py  char_meta_table.py  char_patch_table.py  character_table.py  charm_table.py  charword_table.py  checkin_table.py  climb_tower_table.py  cooperate_battle_table.py  enemy_database.py  gacha_table.py  gamedata_const.py  handbook_info_table.py  item_table.py  medal_table.py  mission_table.py  open_server_table.py  prts___levels.py  replicate_table.py  retro_table.py  roguelike_topic_table.py  sandbox_perm_table.py  sandbox_table.py  shop_client_table.py  skill_table.py  stage_table.py  story_review_meta_table.py  story_review_table.py  story_table.py  uniequip_table.py  zone_table.py
app/src/main/python/Ark-Unpacker/src/utils/: ArgParser.py  Config.py  GlobalMethods.py  Logger.py  SaverUtils.py  TaskUtils.py
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ru/: strings.xml
gradle/: libs.versions.toml
(+152 files in other folders)
