[tool.poetry]
name = "ArkUnpacker"
version = "3.2.0"
description = "Arknights Assets Unpacker"
authors = ["Harry Huang <harryhuang2652@qq.com>"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
bson = "~0.5"
flatbuffers = "~24.3"
numpy = "~1.26.0"
Pillow = "~8.4"
pycryptodome = "~3.21.0"
UnityPy = "~1.20.0"

[tool.poetry.dev-dependencies]
pyinstaller = "6.11.0"

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.build]
build-dir = "$project$\\build"
entry = "$project$\\Main.py"
icon = "$project$\\ArkUnpacker.ico"
add-binary = "$venv$\\Lib\\site-packages\\UnityPy\\lib:UnityPy\\lib|$venv$\\Lib\\site-packages\\UnityPy\\resources\\uncompressed.tpk:UnityPy\\resources"
add-data = "$project$\\src\\fbs\\CN:src\\fbs\\CN"
hidden-import = "flatbuffers"
log-level = "WARN"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
